Visual tweak for Touch mode.
git-svn-id: http://dabr.googlecode.com/svn/trunk@210 760c5f7a-8625-11dd-9205-735403a6da14

--- a/browsers/touch.css
+++ b/browsers/touch.css
@@ -13,3 +13,5 @@ body.show-menu #menu-extras { display: block; }
 #menu-extras { display: none; border-top: 1px solid #eee; }
 #menu-extras li { float: none; }
 #menu-extras a { padding: 0.8em; border-bottom: 1px solid #eee; }
+
+.timeline a img { padding: 1px 2px; }
